--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "dependencies": {
     "express": "3.0.5",
     "jade": "*",
+    "mongoose" : "*",
+    "connect" : "*",
+    "socket.io" : "*",
     "myapp": "*"
   }
 }
